--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,13 @@
   text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text {
+  color: #5b5753;
+  font-family: "Open Sans", sans-serif;
+}
+
+.section {
+  padding-top: 60px;
+  padding-right: 30px;
+  padding-left: 30px;
 }
