--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,4 +1,5 @@
 .home {
+  background-color: black;
   position: relative;
 }
 
@@ -14,10 +15,22 @@
   opacity: 0.5;
 }
 
-h1 {
+* {
   position: relative;
-  color: #ffffff;
-  font-size: 14rem;
-  line-height: 0.9;
-  text-align: center;
+}
+
+.homeTitle1 {
+  margin: 0 0 10px 0;
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 56px;
+  color: #fff;
+  font-family: Raleway;
+}
+
+.homeTitle2 {
+  color: #fff;
+  margin-bottom: 50px;
+  font-size: 26px;
+  font-family: "Poppins", sans-serif;
 }
