--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #333;
+  background-color: #040b14;
   color: #fff;
   padding: 20px;
   z-index: 1;
